# learning

./: .env.example  .gitignore  404.html  README.md  index.html
00_code/: 14_LongestCommonPrefix.cpp  a.out  input.txt
00_project/: README.md
04_DevOps/poetry/project/: pyproject.toml
04_DevOps/poetry/project/demo/: app.py
04_DevOps/poetry/project/project/: app.py  main.py
06_Dataengnner/: docker-compose.yaml
10_LLM/: pyproject.toml
10_LLM/WangchanLIONv2/: wangchanlion.ipynb
SQLAlchemy/: database.py  declareModels.py  pyproject.toml  sqmple.py  test_sample.py  test_sysexit.py  users.py
TailwindCSS/: index.html
about/: index.html
api_go/: README.md  main.go
backend_nodejs/: README.md  package.json  server.js
c++/: hello.cpp  input.cpp
dbml/: example.dbml  frsit.dbml  package.json
deno/: README.md
docker_swarm/: README.md  app.js  build.sh  docker-compose.debug.yml  docker-compose.yml  package-lock.json  package.json  test.py
docling/: docling.ipynb
elk_stack/: docker-compose.yaml
excalidraw/: docker-compose.yml
expressjs/: app.js  package-lock.json  package.json  server.js
fastAPI/: .gitignore  Dockerfile  README.md  main.py
fastAPI/todo-app/: main.py  pyproject.toml
gethomepage/: docker-compose.yaml
git/: README.md  hello.cpp  hello.go
glance/: docker-compose.yml
go/: hello.go  packages.go  todo.md
google_AI_Studio/: README.md  main.py  pyproject.toml
grafana/: docker-compose.yaml
home-assistant/: docker-compose.yml
html/: index.html
java/: Array.java  Empleoyee.java  Encapsulation.java  Inheritance.java  Vehicle.java  abstraction.java  array.java  arrays.java  creating_naing.java  hello.java  readme.md  string.java  stringjava.java  sumofarray.java
javascript/: hello.js
jenkins/: Jenkinsfile
kaggle/: datascience.ipynb
kan/: .env.example  setup.sh
kompose/: redis-leader-deployment.yaml  redis-leader-service.yaml  redis-replica-deployment.yaml  redis-replica-service.yaml  web-deployment.yaml  web-tcp-service.yaml
langChain_js/: chat_models.js  openai.js  package-lock.json  package.json
langChain_python/: 01_Introduction.ipynb  02_Build a Simple LLM Application.ipynb  chatbot.ipynb  main.py  pyproject.toml
langChain_web_Search_Tools/: agent.js  app.js  app_API.js  package-lock.json  package.json
langchain/: langchain.ipynb  streaming.ipynb
langgraph/: 01_Build a basic chatbot.ipynb  01_Multi-Agent.ipynb  pyproject.toml
langgraph_js/: app.js  chatPrompt.js  package-lock.json  package.json  server.js
lazyvim/: README.md
manim/: main.py
mermaid/: learning.md
n8n/: docker-compose.yml
neo4j/: docker-compose.yml
netdata/: docker-compose.yml
nginx_Reverse_Proxy/: docker-compose.yml  index.js  package-lock.json  package.json
node_login/: package.json  server.js
ollama-ocr/: README.md  pyproject.toml  run.py
openai/: 00_oepnai.ipynb  README.md  pyproject.toml
openrouter/: README.md  openRunter.ipynb  pyproject.toml
pandas/: pandas.ipynb
php_docker/: Dockerfile  docker-compose.yml
pihole/: .env.example  docker-compose.yaml
pocketbase/: docker-compose.yml
poetry/project/: Dockerfile  package-lock.json  pyproject.toml
portainer/: docker-compose.yml
postgres/: docker-compose.yml
pygame/mygame/: README.md  pyproject.toml
pygame/mygame/mygame/: main.py
python/: 01_firsthello.py  05_.py  Readme.md  data_type.py  hello.py  pyproject.toml
qdrant/: Build Your First Semantic Search Engine in 5 Minutes.ipynb
rag_deepseek-r1/: README.md  app.py  pyproject.toml  rag.py  requirements.txt
rag_with_deepseek/: README.md  app.py  pyproject.toml  requirements.txt
rss/: main.py  pyproject.toml
rust/: hello  hello.rs
search/: search_index.json
sklearn/: Supervised learning.ipynb  pyproject.toml
solidtime/: docker-compose.yml
tailwindcss/: package.json
tkinter/: main.py  pyproject.toml
traefik/: docker-compose.yml
typeScript/: package-lock.json  package.json  server.js
typhoon/: typhoon.ipynb
uploadfile/: index.js  package-lock.json  package.json
uptimeKuma/: start_uptimeKuma.sh
vim/: README.md  hello.js  hello.txt
(+143 files in other folders)
