[tool.poetry]
name = "llm"
version = "0.1.0"
description = "LLM is ALL YOU NEED"
authors = ["Game <jeerasakananta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
transformers = "^4.47.0"
torch = "^2.5.1"
accelerate = "^1.2.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
