[tool.poetry]
name = "langgraph_learning"
version = "0.1.0"
description = "leraning  langraph"
authors = ["Game <jeerasakananta@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.3.2"
openai = "^1.65.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
