[tool.poetry]
name = "rag-deepseek-r1"
version = "0.1.0"
description = "rag deepseek r1"
authors = ["Game <jeerasakananta@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.42.1"
langchain = "^0.3.19"
langchain-ollama = "^0.2.3"
langchain-community = "^0.3.17"
streamlit-chat = "^0.1.1"
pypdf = "^5.3.0"
chromadb = "^0.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
